Downgrade core module to java 8. Allow using different java versions for different modules (#9)
This will allow using the library without spring-boot on older JVMs